# boatrace-vote

./: .dockerignore  .env.original  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  logging.conf  pyproject.toml
.github/workflows/: build.yml
boatrace_vote/: __init__.py  crawl_loop.py  create_racelist.py  find_payoff_race.py  find_vote_race.py  payoff_race.py  utils.py  vote_loop.py  vote_race.py  vote_result.py
tests/: test_hello.py
