[tool.poetry]
name = "boatrace-vote"
version = "0.1.0"
description = ""
authors = ["u6k"]
license = "MIT License"
readme = "README.md"
packages = [{include = "boatrace_vote"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
